@@ -48,6 +48,9 @@
    - markus@cvs.openbsd.org 2002/01/29 23:50:37
      [scp.1 ssh.1]
      mention exit status; ok stevesk@
+   - markus@cvs.openbsd.org 2002/01/31 13:35:11
+     [kexdh.c kexgex.c]
+     cross check announced key type and type from key blob
 
 20020130
  - (djm) Delay PRNG seeding until we need it in ssh-keygen, from markus@
@@ -7450,4 +7453,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1812 2002/02/05 01:16:15 djm Exp $
+$Id: ChangeLog,v 1.1813 2002/02/05 01:19:52 djm Exp $
